Update translations for various languages to improve accuracy and consistency

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -225,7 +225,7 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Canviar",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Si aquesta instal·lació estarà en línia, hauria de canviar la contrasenya per una de més segura.",
     "channel": "Canal",
     "charge-date": "Data càrrec",
     "chart": "Gràfic",
@@ -543,7 +543,7 @@
     "end-date": "Data de finalització",
     "end-month": "Mes de fi",
     "end-time": "Hora de finalització",
-    "environment": "Entorno",
+    "environment": "Entorn",
     "epigraph": "Epígraf",
     "epigraph-group": "Grup d'epígraf",
     "epigraphs": "Epígrafs",
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informació d'Estat",
     "initial-number": "Número inicial",
     "insert-update": "Afegir o modificar",
-    "installation": "Instalación",
+    "installation": "Instal·lació",
     "installed": "instal·lat",
     "installed-plugins": "Instal·lats",
     "installer": "Instal·lador",
@@ -903,7 +903,7 @@
     "library": "Biblioteca",
     "license": "Llicència",
     "like-than": "Igual que",
-    "limits": "Límites",
+    "limits": "Límits",
     "line": "Línia",
     "lines": "Línies",
     "linux": "Linux",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Cap forat trobat",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha import pendent",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No teniu permís per imprimir o exportar",
     "no-reference": "Sense referència",
     "no-selected-item": "Cap element seleccionat",
@@ -1375,7 +1375,7 @@
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Avís de seguretat",
     "select": "Seleccionar",
     "select-all": "Seleccionar tot",
     "select-content-for": "Selecciona contingut per a %content%",
@@ -1414,14 +1414,14 @@
     "serierb": "Sèrie RB",
     "series": "Sèries",
     "server": "Servidor",
-    "server-software": "Software del servidor",
+    "server-software": "Programari del servidor",
     "service": "Servei",
     "services": "Serveis",
     "settings": "Ajustaments",
     "settlement": "liquidació",
     "settlement-product": "Producte de liquidació",
     "settlements": "liquidacions",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configuració manual",
     "setup-options": "Opcions de configuració",
     "shipping": "Envio",
     "shipping-address": "Adreça d'enviament",
@@ -1616,10 +1616,10 @@
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "two-factor-auth": "Autenticació en 2 passos",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
+    "two-factor-auth-enable": "Activar l'autenticació en 2 passos",
+    "two-factor-auth-enabled": "Autenticació en 2 passos activada",
+    "two-factor-auth-p": "Configura l'app Google Authenticator utilitzant el QR, introdueix aquí el codi i prem verificar per completar el procés d'activació.",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
