--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1375,7 +1375,7 @@
     "second-hand": "Segunda mano",
     "second-quarter": "2. čtvrtletí",
     "second-trimester": "Segundo trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Bezpečnostní upozornění",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-content-for": "Vyberte obsah pro %content%",
@@ -1616,9 +1616,9 @@
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "two-factor-auth": "2fázové ověření",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-disabled": "Dvoufázové ověření je deaktivováno",
+    "two-factor-auth-enable": "Aktivovat dvoufaktorové ověření",
+    "two-factor-auth-enabled": "Dvoufázové ověření je aktivováno",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Aktivovat dvoufázovou autentizaci",
     "type": "Tipo",
