--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -543,7 +543,7 @@
     "end-date": "Endtermin",
     "end-month": "Endmonat",
     "end-time": "Endzeit",
-    "environment": "Entorno",
+    "environment": "Umgebung",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph-Gruppe",
     "epigraphs": "Inschriften",
@@ -903,7 +903,7 @@
     "library": "Bibliotek",
     "license": "Licencia",
     "like-than": "Wie als",
-    "limits": "Límites",
+    "limits": "Grenzen",
     "line": "Linie",
     "lines": "Linien",
     "linux": "Linux",
@@ -1041,7 +1041,7 @@
     "next": "Nächster",
     "nick": "Kerbe",
     "no": "nicht",
-    "no-admin": "No administrador",
+    "no-admin": "Kein Administrator",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
     "no-document-selected": "Es wurde kein Dokument ausgewählt.",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Keine Lücken gefunden",
     "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Es sind keine Plugins installiert",
     "no-print-permission": "Sie haben keine Berechtigung zum Drucken oder Exportieren.",
     "no-reference": "Keine Referenz",
     "no-selected-item": "Keine Elemente ausgewählt",
@@ -1375,7 +1375,7 @@
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
     "second-trimester": "Zweites Trimester",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Sicherheitswarnung",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
     "select-content-for": "Wählen Sie Inhalt für %content% aus.",
@@ -1414,14 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Serie",
     "server": "Server:",
-    "server-software": "Software del servidor",
+    "server-software": "Server-Software",
     "service": "Dienstleistung",
     "services": "Dienstleistungen",
     "settings": "Einstellungen",
     "settlement": "Abwicklung",
     "settlement-product": "Abrechnungsprodukt",
     "settlements": "Abrechnungen",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Manuelle Konfiguration",
     "setup-options": "Einrichtungsoptionen",
     "shipping": "Versand",
     "shipping-address": "Lieferanschrift",
