--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -225,7 +225,7 @@
     "center": "Center",
     "certificate": "Certificate",
     "change": "Change",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "If this installation is going to be online, you should change the password to a more secure one.",
     "channel": "Channel",
     "charge-date": "Charge date",
     "chart": "Chart",
@@ -543,7 +543,7 @@
     "end-date": "End date",
     "end-month": "End month",
     "end-time": "End time",
-    "environment": "Entorno",
+    "environment": "Environment",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph group",
     "epigraphs": "Epigraphs",
@@ -903,7 +903,7 @@
     "library": "Library",
     "license": "License",
     "like-than": "Like than",
-    "limits": "Límites",
+    "limits": "Limits",
     "line": "Line",
     "lines": "Lines",
     "linux": "Linux",
@@ -1064,7 +1064,7 @@
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Not Public",
-    "not-registered": "No registrada",
+    "not-registered": "Not registered",
     "not-sent": "Not sent",
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
@@ -1414,14 +1414,14 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Server",
-    "server-software": "Software del servidor",
+    "server-software": "Server Software",
     "service": "Service",
     "services": "Services",
     "settings": "Settings",
     "settlement": "Settlement",
     "settlement-product": "Settlement product",
     "settlements": "Settlements",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Manual setup",
     "setup-options": "Setup options",
     "shipping": "Shipping",
     "shipping-address": "Shipping address",
@@ -1616,9 +1616,9 @@
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
     "two-factor-auth": "2-step authentication",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-disabled": "Two-factor authentication disabled",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Two-factor authentication enabled",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
