--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -543,7 +543,7 @@
     "end-date": "Amaiera data",
     "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
-    "environment": "Entorno",
+    "environment": "Inguru",
     "epigraph": "Epigrafea",
     "epigraph-group": "Epigrafe taldea",
     "epigraphs": "Epigrafeak",
@@ -903,7 +903,7 @@
     "library": "Liburutegia",
     "license": "Lizentzia",
     "like-than": "Honen berdina",
-    "limits": "Límites",
+    "limits": "Mugak",
     "line": "Lerroa",
     "lines": "Lerroak",
     "linux": "Linux",
@@ -1414,14 +1414,14 @@
     "serierb": "RB seriea",
     "series": "Serieak",
     "server": "Zerbitzaria",
-    "server-software": "Software del servidor",
+    "server-software": "Servidor software",
     "service": "Zerbitzua",
     "services": "Zerbitzuak",
     "settings": "Ezarpenak",
     "settlement": "Likidazioa",
     "settlement-product": "Likidazio produktua",
     "settlements": "Likidazioak",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Ezarpen magicodun",
     "setup-options": "Konfigurazio aukerak",
     "shipping": "Bidalketa",
     "shipping-address": "Bidaltzeko helbidea",
@@ -1618,7 +1618,7 @@
     "two-factor-auth": "Bi faktoreren autentifikazioa",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Bi pausoko autentifikazioa aktibatuta",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Bi pausoetako autentifikazioa aktibatu",
     "type": "Mota",
@@ -1692,7 +1692,7 @@
     "vat-regularization": "BEZ erregularizazioa",
     "vehicle": "Ibilgailua",
     "verified": "Egiaztatua",
-    "verify": "Verificar",
+    "verify": "Berretsi",
     "version": "Bertsioa",
     "video": "Bideoa",
     "vies-check-success": "'%vat-number%' zenbakia VIES sistemaren erregistroan dago",
