--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -225,7 +225,7 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Changer",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Si cette installation va à être en ligne, vous devriez changer le mot de passe pour un plus sécurisé.",
     "channel": "canal",
     "charge-date": "Date de facturation",
     "chart": "Graphique",
@@ -543,7 +543,7 @@
     "end-date": "Date de fin",
     "end-month": "Mois de fin",
     "end-time": "Heure de fin",
-    "environment": "Entorno",
+    "environment": "Environnement",
     "epigraph": "Épigraphe",
     "epigraph-group": "Groupe épigraphique",
     "epigraphs": "Épigraphes",
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informations d'état",
     "initial-number": "Numéro initial",
     "insert-update": "Ajouter ou modifier",
-    "installation": "Instalación",
+    "installation": "Installation",
     "installed": "Installé",
     "installed-plugins": "Installé",
     "installer": "Installateur FacturaScripts 2018 (Alpha)",
@@ -1041,7 +1041,7 @@
     "next": "Prochain",
     "nick": "Nick",
     "no": "Non",
-    "no-admin": "No administrador",
+    "no-admin": "Pas d'administration",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
     "no-document-selected": "Aucun document sélectionné",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
     "no-outstanding-amount": "Il n'y a pas de montant impayé",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Aucun plugin installé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Pas de référence",
     "no-selected-item": "Aucun élément sélectionné",
@@ -1064,7 +1064,7 @@
     "not-enough-stock": "Stock insuffisant pour %reference%",
     "not-passed-integrity-check": "Certains fichiers n'ont pas passé le test d'intégrité...<br\\\/>Vous pouvez <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir plus de détails ici<\/a>.",
     "not-public": "Non public",
-    "not-registered": "No registrada",
+    "not-registered": "Non enregistrée",
     "not-sent": "Non envoyé",
     "not-stored-content": "Contenu non stocké",
     "not-valid-email": "Adresse e-mail incorrecte %email%",
@@ -1375,7 +1375,7 @@
     "second-hand": "Seconde main",
     "second-quarter": "2ème trimestre",
     "second-trimester": "Second trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Avertissement de sécurité",
     "select": "Sélectionner",
     "select-all": "Tout sélectionner",
     "select-content-for": "Sélectionnez le contenu pour %content%",
@@ -1616,10 +1616,10 @@
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
     "two-factor-auth": "Authentification à deux facteurs",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-disabled": "Authentification à deux facteurs désactivée",
+    "two-factor-auth-enable": "Activer l'authentification à deux facteurs",
+    "two-factor-auth-enabled": "Authentification en 2 étapes activée",
+    "two-factor-auth-p": "Configurez l'application Google Authenticator en utilisant le QR, entrez le code ici et appuyez sur vérifier pour compléter le processus d'activation.",
     "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
@@ -1692,7 +1692,7 @@
     "vat-regularization": "Régularisation de la TVA",
     "vehicle": "Véhicule",
     "verified": "vérifié",
-    "verify": "Verificar",
+    "verify": "Vérifier",
     "version": "Version",
     "video": "Vidéo",
     "vies-check-success": "Le numéro \"%vat-number%\" est enregistré dans le système VIES.",
