--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -225,7 +225,7 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "Cambiar",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Se esta instalación vai estar online, debería cambiar a contrasinal por unha máis segura.",
     "channel": "Canal",
     "charge-date": "Data cargo",
     "chart": "Gráfico",
@@ -1041,7 +1041,7 @@
     "next": "Seguinte",
     "nick": "Apodo",
     "no": "Non",
-    "no-admin": "No administrador",
+    "no-admin": "Non administrador",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "Non se seleccionou ningún documento",
