--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informazioni di Stato",
     "initial-number": "numero iniziale",
     "insert-update": "Inserisci o aggiorna",
-    "installation": "Instalación",
+    "installation": "Installazione",
     "installed": "Installato",
     "installed-plugins": "Plugin installati",
     "installer": "Installer",
@@ -903,7 +903,7 @@
     "library": "Biblioteca",
     "license": "Licenza",
     "like-than": "Mi piace",
-    "limits": "Límites",
+    "limits": "Limiti",
     "line": "Linea",
     "lines": "Linee",
     "linux": "Linux",
@@ -1041,7 +1041,7 @@
     "next": "Il prossimo",
     "nick": "tacca",
     "no": "non",
-    "no-admin": "No administrador",
+    "no-admin": "Nessun amministratore",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
     "no-document-selected": "Nessun documento selezionato",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "Nessuna fattura",
     "no-outstanding-amount": "nessuna somma in sospeso",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Nessun plugin installato",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Senza riferimento",
     "no-selected-item": "Nessun elemento selezionato",
@@ -1617,7 +1617,7 @@
     "tuesday": "Martedì",
     "two-factor-auth": "Autenticazione a due fattori",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
