--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -225,7 +225,7 @@
     "center": "Centrum",
     "certificate": "Certyfikat",
     "change": "Zmień",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Jeśli ta instalacja ma być online, powinieneś zmienić hasło na bardziej bezpieczne.",
     "channel": "Kanał",
     "charge-date": "Data obciążenia",
     "chart": "Wykres",
@@ -543,7 +543,7 @@
     "end-date": "Data zakończenia",
     "end-month": "Miesiąc zakończenia",
     "end-time": "Czas zakończenia",
-    "environment": "Entorno",
+    "environment": "Środowisko",
     "epigraph": "Epigraf",
     "epigraph-group": "Grupa epigrafu",
     "epigraphs": "Epigrafy",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
     "no-outstanding-amount": "Nie ma zaległej kwoty",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Brak zainstalowanych wtyczek",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
