--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -543,7 +543,7 @@
     "end-date": "Data Final",
     "end-month": "Mês de fim",
     "end-time": "hora-final",
-    "environment": "Entorno",
+    "environment": "Ambiente",
     "epigraph": "Título",
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Títulos",
@@ -1375,7 +1375,7 @@
     "second-hand": "Segunda mão",
     "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Aviso de segurança",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-content-for": "Selecione o conteúdo para %content%",
@@ -1421,7 +1421,7 @@
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "Liquidações",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configuração manual",
     "setup-options": "Ajustar opções",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
@@ -1617,8 +1617,8 @@
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 etapas",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enable": "Ativar a autenticação em 2 passos",
+    "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Ativar autenticação em 2 etapas",
     "type": "Tipo",
