--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1041,7 +1041,7 @@
     "next": "Próximo",
     "nick": "usuario",
     "no": "Não",
-    "no-admin": "No administrador",
+    "no-admin": "Não administrador",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-document-selected": "Nenhum documento foi selecionado",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
     "no-outstanding-amount": "Não há valor pendente",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
@@ -1064,7 +1064,7 @@
     "not-enough-stock": "Não há stock suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
-    "not-registered": "No registrada",
+    "not-registered": "Não registrada",
     "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1375,7 +1375,7 @@
     "second-hand": "Em segunda mão",
     "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Aviso de segurança",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-content-for": "Selecione conteúdo para %content%",
@@ -1414,7 +1414,7 @@
     "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
-    "server-software": "Software del servidor",
+    "server-software": "Software do servidor",
     "service": "Serviço",
     "services": "Serviços",
     "settings": "Configurações",
