--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informació de l'estat",
     "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
-    "installation": "Instalación",
+    "installation": "Instal·lació",
     "installed": "Instalat",
     "installed-plugins": "Complements instalats",
     "installer": "Instal·lador de FacturaScripts 2018",
@@ -903,7 +903,7 @@
     "library": "Biblioteca",
     "license": "Llicència",
     "like-than": "Igual que",
-    "limits": "Límites",
+    "limits": "Límits",
     "line": "línia",
     "lines": "Línies",
     "linux": "Linux",
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Cap buit trobat",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sense referència",
     "no-selected-item": "No hi ha cap element seleccionat",
@@ -1414,7 +1414,7 @@
     "serierb": "Sèrie RB",
     "series": "Séries",
     "server": "Servidor",
-    "server-software": "Software del servidor",
+    "server-software": "Programari del servidor",
     "service": "Servici",
     "services": "Serveis",
     "settings": "Ajustes",
@@ -1616,8 +1616,8 @@
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
     "two-factor-auth": "Autenticació en 2 passos",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
+    "two-factor-auth-enable": "Activar autenticació en 2 passos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar autenticació en 2 passos",
