Add install method to Pais and update translations in JSON files

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1692,7 +1692,7 @@
     "vat-regularization": "VAT Regularization",
     "vehicle": "Vehicle",
     "verified": "Verified",
-    "verify": "Verificar",
+    "verify": "Verify",
     "version": "Version",
     "video": "Video",
     "vies-check-success": "Number '%vat-number%' is registered in VIES system",
