--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -543,7 +543,7 @@
     "end-date": "Data final",
     "end-month": "Fim de mês",
     "end-time": "Hora de finalização",
-    "environment": "Entorno",
+    "environment": "Ambiente",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo Epígrafe",
     "epigraphs": "Epígrafes",
@@ -903,7 +903,7 @@
     "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
-    "limits": "Límites",
+    "limits": "Limites",
     "line": "Linha",
     "lines": "Linhas",
     "linux": "Linux",
