--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1618,7 +1618,7 @@
     "two-factor-auth": "Autenticació en 2 passos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
     "two-factor-auth-enable": "Activar autenticació en 2 passos",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Autenticació en 2 passos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
