Update model parameter type and improve translations in multiple language files

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1414,7 +1414,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
-    "server-software": "Software del servidor",
+    "server-software": "Software do servidor",
     "service": "Servizo",
     "services": "Servizos",
     "settings": "Axustes",
@@ -1619,7 +1619,7 @@
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Configura a app Google Authenticator usando o QR, introduce aquí o código e pulsa verificar para completar o proceso de activación.",
     "two-factor-enabled": "Activar a autenticación en dous pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
