--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -543,7 +543,7 @@
     "end-date": "Data di fine",
     "end-month": "Mese di fine",
     "end-time": "tempo finale",
-    "environment": "Entorno",
+    "environment": "Ambiente",
     "epigraph": "Epigrafe",
     "epigraph-group": "Gruppo epigrafico",
     "epigraphs": "Le epigrafi",
