--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informacja o stanie",
     "initial-number": "Numer początkowy",
     "insert-update": "Dodaj lub zmodyfikuj",
-    "installation": "Instalación",
+    "installation": "Instalacja",
     "installed": "Zainstalowane",
     "installed-plugins": "Zainstalowane",
     "installer": "Instalador",
