--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Informação do Status",
     "initial-number": "Número inicial",
     "insert-update": "Inserir ou atualizar",
-    "installation": "Instalación",
+    "installation": "Instalação",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -1619,7 +1619,7 @@
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Ativar a autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Configura o aplicativo Google Authenticator usando o QR, insira o código aqui e pressione verificar para completar o processo de ativação.",
     "two-factor-enabled": "Ativar autenticação em 2 etapas",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
