Replace Endroid QR code library with Chillerlan and add new translation keys for disabling two-factor authentication

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "two-factor-auth": "2fázové ověření",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Dvoufázové ověření je deaktivováno",
     "two-factor-auth-enable": "Aktivovat dvoufaktorové ověření",
     "two-factor-auth-enabled": "Dvoufázové ověření je aktivováno",
