--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
