--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
     "two-factor-auth": "Bi faktoreren autentifikazioa",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Bi pausoko autentifikazioa aktibatuta",
