--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
     "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
     "two-factor-auth-enable": "Activar autenticació en 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
