--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
     "two-factor-auth-enable": "Activar l'autenticació en 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
