--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
     "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
