--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
