--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1616,6 +1616,7 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 etapas",
+    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Ativar a autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
