Refactor database access in CodeModel and update translation keys for multiple languages

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Información de Estado",
     "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
-    "installation": "Instalación",
+    "installation": "Instalace",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalátor FacturaScripts",
