--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1375,7 +1375,7 @@
     "second-hand": "Second hand",
     "second-quarter": "2nd Quarter",
     "second-trimester": "Second trimester",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Security warning",
     "select": "Select",
     "select-all": "Select all",
     "select-content-for": "Select content for %content%",
