--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1041,7 +1041,7 @@
     "next": "Próximo",
     "nick": "Apelido",
     "no": "Não",
-    "no-admin": "No administrador",
+    "no-admin": "Não administrador",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-document-selected": "Nenhum documento selecionado",
