--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -543,7 +543,7 @@
     "end-date": "Data de fi",
     "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
-    "environment": "Entorno",
+    "environment": "Entorn",
     "epigraph": "Grup contable",
     "epigraph-group": "Grup d'epìgraf",
     "epigraphs": "Grups",
@@ -1375,7 +1375,7 @@
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Avís de seguretat",
     "select": "select",
     "select-all": "Seleccionar tot",
     "select-content-for": "Selecciona contingut per %content%",
@@ -1421,7 +1421,7 @@
     "settlement": "Liquidació",
     "settlement-product": "Producte de liquidació",
     "settlements": "Liquidacions",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configuració manual",
     "setup-options": "Opcions de configuració",
     "shipping": "Enviament",
     "shipping-address": "Direcció d'enviament",
